--- a/deep_io/definitivo_definitivo.ipynb
+++ b/deep_io/definitivo_definitivo.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import deep_inv_opt as io\n",
     "import deep_inv_opt.plot as iop\n",
+    "import torch\n",
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,29 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.5000],\n",
-       "        [0.7857],\n",
-       "        [1.0714],\n",
-       "        [1.3571],\n",
-       "        [1.6429],\n",
-       "        [1.9286],\n",
-       "        [2.2143],\n",
-       "        [2.5000]], dtype=torch.float64)"
+       "tensor([[ 0.5000],\n",
+       "        [ 0.5484],\n",
+       "        [ 0.5968],\n",
+       "        ...,\n",
+       "        [49.9032],\n",
+       "        [49.9516],\n",
+       "        [50.0000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "u_train = io.tensor(np.linspace(0.5, 2.5, 8).reshape((-1, 1)))\n",
+    "u_train = io.tensor(np.linspace(0.5, 50, 1024).reshape((-1, 1)))\n",
     "u_train"
    ]
   },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,32 +85,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plp_true = ExamplePLP(weights=[0.8])\n",
+    "\n",
+    "# Generate training targets by solve the true PLP at each u value.\n",
+    "# x_train = torch.cat([io.linprog(*plp_true(ui)).detach().t() for ui in u_train])\n",
+    "# torch.save(x_train, \"x_train.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[6.3378e-06, 4.7761e-06],\n",
-       "        [7.7206e-06, 3.8456e-06],\n",
-       "        [2.9260e-05, 5.8345e-06],\n",
-       "        [2.9473e+00, 7.6424e-06],\n",
-       "        [2.4348e+00, 8.2233e-06],\n",
-       "        [2.0741e+00, 1.4854e-05],\n",
-       "        [1.8064e+00, 1.8646e+00],\n",
-       "        [1.6000e+00, 2.3250e+00]], dtype=torch.float64)"
+       "        [6.4988e-06, 4.6438e-06],\n",
+       "        [6.1619e-06, 4.1501e-06],\n",
+       "        ...,\n",
+       "        [8.0112e-02, 1.4527e-05],\n",
+       "        [1.9709e-04, 6.2439e+01],\n",
+       "        [2.5363e-05, 5.3045e-05]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plp_true = ExamplePLP(weights=[0.8])\n",
-    "\n",
-    "# Generate training targets by solve the true PLP at each u value.\n",
-    "x_train = torch.cat([io.linprog(*plp_true(ui)).detach().t() for ui in u_train])\n",
+    "x_train = torch.load(\"x_train.pt\")\n",
     "x_train"
    ]
   },
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,26 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\JairoEscanez\\AppData\\Local\\Temp\\ipykernel_6504\\3770122034.py:4: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  self.data = torch.tensor(data, dtype=torch.float32)\n",
-      "C:\\Users\\JairoEscanez\\AppData\\Local\\Temp\\ipykernel_6504\\3770122034.py:5: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  self.targets = torch.tensor(targets, dtype=torch.float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "learning_rate = 1e-3\n",
+    "batch_size = 8\n",
+    "epochs = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# definimos el dataset\n",
     "class UDataset(Dataset):\n",
     "    def __init__(self, data, targets):\n",
-    "        self.data = torch.tensor(data, dtype=torch.float32)\n",
-    "        self.targets = torch.tensor(targets, dtype=torch.float32)\n",
+    "        self.data = data.clone().to(dtype=torch.float32) # nota: esta dando el warning porque estoy convirtiendo un tensor a otro, en ese caso es mejor usar clone()\n",
+    "        # si los datos de entrada no los voy a dar como un tensor, entonces hay que poner lo que he puesto: self.data = torch.tensor(data, dtype=torch.float32), self.targets = torch.tensor(targets, dtype=torch.float32)\n",
+    "        self.targets = targets.clone().to(dtype=torch.float32)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
@@ -165,12 +175,12 @@
     "# u_data = [[1.0], [2.0], [3.0], [4.0]]\n",
     "# x_targets = [[1.0, 1.5], [2.0, 2.5], [3.0, 3.5], [4.0, 4.5]]\n",
     "dataset = UDataset(u_train, x_train)\n",
-    "dataloader = DataLoader(dataset, batch_size=2, shuffle=True)"
+    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,66 +236,166 @@
     "def my_loss(c, A, b, target):\n",
     "    rs = smooth_lp(c, A, b)\n",
     "    loss = torch.sum((rs - target) ** 2)\n",
-    "    return loss\n"
+    "    return loss\n",
+    "\n",
+    "def loss_fn(c, A, b, target):\n",
+    "    return torch.mean(torch.stack([my_loss(c[i], A[i], b[i], target[i]) for i in range(len(c))]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss: 7.246618270874023\n",
-      "Epoch 10, Loss: 0.11243888735771179\n",
-      "Epoch 20, Loss: 0.09430646151304245\n",
-      "Epoch 30, Loss: 7.003658294677734\n",
-      "Epoch 40, Loss: 6.5131049156188965\n",
-      "Epoch 50, Loss: 5.137110710144043\n",
-      "Epoch 60, Loss: 0.09901656955480576\n",
-      "Epoch 70, Loss: 0.09430646151304245\n",
-      "Epoch 80, Loss: 10.219924926757812\n",
-      "Epoch 90, Loss: 7.246618270874023\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Crear la red neuronal\n",
     "model = ParametricLPNet()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_loop(dataloader, model, loss_fn, optimizer):\n",
+    "    for batch, (u_batch, x_batch) in enumerate(dataloader):\n",
+    "        size = len(dataloader.dataset)\n",
     "\n",
-    "\n",
-    "# Entrenamiento\n",
-    "for epoch in range(100):\n",
-    "    for u_batch, x_batch in dataloader:\n",
     "        c, A, b = model(u_batch)\n",
-    "        \n",
     "        # Calcular la pérdida\n",
-    "        loss = my_loss(c[0], A[0], b[0], x_batch[0])  # Usar el target correspondiente\n",
+    "        #loss = my_loss(c[0], A[0], b[0], x_batch[0])  # Usar el target correspondiente\n",
+    "        loss = loss_fn(c, A, b, x_batch)\n",
     "\n",
     "        # Backpropagation y optimización\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "    if epoch % 10 == 0:\n",
-    "        print(f\"Epoch {epoch}, Loss: {loss.item()}\")"
+    "        if batch % 8 == 0: # cambiar este numero para que salga cada cierto numero de iteraciones\n",
+    "            loss, current = loss.item(), batch * batch_size + len(u_batch)\n",
+    "            print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_loop(dataloader, model, loss_fn):\n",
+    "    model.eval()\n",
+    "    size=len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    test_loss, correct = 0, 0\n",
+    "\n",
+    "    #with torch.no_grad():\n",
+    "    for u_batch, x_batch in dataloader:\n",
+    "        c, A, b = model(u_batch)\n",
+    "        test_loss += loss_fn(c, A, b, x_batch).item()\n",
+    "        x_pred = torch.stack([smooth_lp(c[i], A[i], b[i]) for i in range(len(c))])\n",
+    "        correct += torch.sum(x_pred == x_batch).item() # cambiar esto, aqui poner la solucion del problema\n",
+    "        # y consideramos correcto si se acerca a la solucion en la distancia euclidea \n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "-------------------------------\n",
+      "loss: 308.633636  [    8/ 1024]\n",
+      "loss: 44.316528  [   72/ 1024]\n",
+      "loss: 645.018982  [  136/ 1024]\n",
+      "loss: 702.106567  [  200/ 1024]\n",
+      "loss: 600.218506  [  264/ 1024]\n",
+      "loss: 189.065430  [  328/ 1024]\n",
+      "loss: 293.191162  [  392/ 1024]\n",
+      "loss: 176.093033  [  456/ 1024]\n",
+      "loss: 97.444130  [  520/ 1024]\n",
+      "loss: 387.624969  [  584/ 1024]\n",
+      "loss: 312.448669  [  648/ 1024]\n",
+      "loss: 467.504272  [  712/ 1024]\n",
+      "loss: 457.937561  [  776/ 1024]\n",
+      "loss: 137.024902  [  840/ 1024]\n",
+      "loss: 414.401276  [  904/ 1024]\n",
+      "loss: 177.858109  [  968/ 1024]\n",
+      "Test Error: \n",
+      " Accuracy: 0.0%, Avg loss: 426.603010 \n",
+      "\n",
+      "Epoch 2\n",
+      "-------------------------------\n",
+      "loss: 213.265717  [    8/ 1024]\n",
+      "loss: 153.985718  [   72/ 1024]\n",
+      "loss: 170.831665  [  136/ 1024]\n",
+      "loss: 406.683990  [  200/ 1024]\n",
+      "loss: 560.645142  [  264/ 1024]\n",
+      "loss: 369.410431  [  328/ 1024]\n",
+      "loss: 446.683563  [  392/ 1024]\n",
+      "loss: 568.539795  [  456/ 1024]\n",
+      "loss: 141.295364  [  520/ 1024]\n",
+      "loss: 500.543060  [  584/ 1024]\n",
+      "loss: 683.219604  [  648/ 1024]\n",
+      "loss: 740.996338  [  712/ 1024]\n",
+      "loss: 536.030212  [  776/ 1024]\n",
+      "loss: 711.007080  [  840/ 1024]\n",
+      "loss: 373.403168  [  904/ 1024]\n",
+      "loss: 526.780457  [  968/ 1024]\n",
+      "Test Error: \n",
+      " Accuracy: 0.0%, Avg loss: 426.603009 \n",
+      "\n",
+      "Epoch 3\n",
+      "-------------------------------\n",
+      "loss: 709.766235  [    8/ 1024]\n",
+      "loss: 382.449341  [   72/ 1024]\n",
+      "loss: 323.314240  [  136/ 1024]\n",
+      "loss: 390.476013  [  200/ 1024]\n",
+      "loss: 645.060974  [  264/ 1024]\n",
+      "loss: 436.589111  [  328/ 1024]\n",
+      "loss: 376.938507  [  392/ 1024]\n",
+      "loss: 438.458221  [  456/ 1024]\n",
+      "loss: 500.322693  [  520/ 1024]\n",
+      "loss: 618.973755  [  584/ 1024]\n",
+      "loss: 349.332916  [  648/ 1024]\n",
+      "loss: 693.901367  [  712/ 1024]\n",
+      "loss: 254.097900  [  776/ 1024]\n",
+      "loss: 524.486755  [  840/ 1024]\n",
+      "loss: 375.093689  [  904/ 1024]\n",
+      "loss: 651.550171  [  968/ 1024]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Entrenamiento\n",
+    "epochs = 4 # poner mas\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
+    "    train_loop(dataloader, model, loss_fn, optimizer)\n",
+    "    test_loop(dataloader, model, loss_fn)\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-0.2972,  0.1004], requires_grad=True)"
+       "tensor([-0.0239, -0.0908], requires_grad=True)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,16 +407,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `validacion` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "en el dataloader hay alguna manera de añadirle un conjunto de validacion?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +448,7 @@
        "        [4.0000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,8 +459,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ahora probamos como funciona para un x nuevo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +491,7 @@
        "        [9.9999e-01, 1.9565e-05]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +518,7 @@
        ")"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +539,7 @@
        " tensor([[5.6596e-06, 5.1630e-06]], dtype=torch.float64))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,28 +552,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.0170,  0.1616]], grad_fn=<SliceBackward0>),\n",
+       " tensor([[[ 0.1045,  0.2215],\n",
+       "          [ 0.1905, -0.0086]]], grad_fn=<ViewBackward0>),\n",
+       " tensor([[0.4271, 0.0514]], grad_fn=<SliceBackward0>))"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(torch.tensor([[0.25]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c, A, b = c,A,b=model(torch.tensor([[0.25]]))\n",
+    "c, A, b = model(torch.tensor([[0.25]]))\n",
     "x_pred = smooth_lp(c[0], A[0], b[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(tensor([[5.6596e-06, 5.1630e-06]], dtype=torch.float64),\n",
-       " tensor([-0.0847,  0.0720], requires_grad=True),\n",
-       " tensor(0.1111, dtype=torch.float64, grad_fn=<LinalgVectorNormBackward0>))"
+       " tensor([ 0.0170, -0.1616], requires_grad=True),\n",
+       " tensor(0.1625, dtype=torch.float64, grad_fn=<LinalgVectorNormBackward0>))"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
