--- a/deep_io/definitivo_definitivo.ipynb
+++ b/deep_io/definitivo_definitivo.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,32 @@
       "loss: 254.097900  [  776/ 1024]\n",
       "loss: 524.486755  [  840/ 1024]\n",
       "loss: 375.093689  [  904/ 1024]\n",
-      "loss: 651.550171  [  968/ 1024]\n"
+      "loss: 651.550171  [  968/ 1024]\n",
+      "Test Error: \n",
+      " Accuracy: 0.0%, Avg loss: 426.603006 \n",
+      "\n",
+      "Epoch 4\n",
+      "-------------------------------\n",
+      "loss: 824.047302  [    8/ 1024]\n",
+      "loss: 674.639954  [   72/ 1024]\n",
+      "loss: 489.317688  [  136/ 1024]\n",
+      "loss: 498.714569  [  200/ 1024]\n",
+      "loss: 363.190735  [  264/ 1024]\n",
+      "loss: 346.328003  [  328/ 1024]\n",
+      "loss: 593.192627  [  392/ 1024]\n",
+      "loss: 741.114868  [  456/ 1024]\n",
+      "loss: 521.599609  [  520/ 1024]\n",
+      "loss: 210.981979  [  584/ 1024]\n",
+      "loss: 644.928589  [  648/ 1024]\n",
+      "loss: 321.627380  [  712/ 1024]\n",
+      "loss: 485.499481  [  776/ 1024]\n",
+      "loss: 682.263916  [  840/ 1024]\n",
+      "loss: 298.594666  [  904/ 1024]\n",
+      "loss: 246.498657  [  968/ 1024]\n",
+      "Test Error: \n",
+      " Accuracy: 0.0%, Avg loss: 426.603010 \n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
