--- a/deep_io/definitivo_definitivo copy.ipynb
+++ b/deep_io/definitivo_definitivo copy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "        [50.0000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "        [2.5363e-05, 5.3045e-05]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +153,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta version es la red neuronal en la que la resolucion del problema de optimizacion esta dentro de la red"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,32 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# definimos la red (hay que revisar la forma de la red y el por qué)\n",
-    "class ParametricLPNet(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(ParametricLPNet, self).__init__()\n",
-    "        # Entrada de dimensión 1, salida 8 (2 para c, 4 para A, 2 para b)\n",
-    "        self.fc = nn.Sequential(\n",
-    "            nn.Linear(1, 16),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(16, 8)  # c (2), A (4), b (2)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, u):\n",
-    "        output = self.fc(u)\n",
-    "        c = output[:, 0:2]      # Vector de costes\n",
-    "        A = output[:, 2:6].reshape(-1, 2, 2)  # Matriz A (2x2)\n",
-    "        b = output[:, 6:8]      # Vector de restricciones\n",
-    "        return c, A, b\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,23 +210,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# funcion de perdida\n",
-    "def my_loss(c, A, b, target):\n",
-    "    rs = smooth_lp(c, A, b)\n",
-    "    loss = torch.sum((rs - target) ** 2)\n",
-    "    return loss\n",
+    "# definimos la red (hay que revisar la forma de la red y el por qué)\n",
+    "class ParametricLPNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ParametricLPNet, self).__init__()\n",
+    "        # Entrada de dimensión 1, salida 8 (2 para c, 4 para A, 2 para b)\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(1, 16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(16, 8)  # c (2), A (4), b (2)\n",
+    "        )\n",
     "\n",
-    "def loss_fn(c, A, b, target):\n",
-    "    return torch.mean(torch.stack([my_loss(c[i], A[i], b[i], target[i]) for i in range(len(c))]))"
+    "    def forward(self, u):\n",
+    "        output = self.fc(u)\n",
+    "        c = output[:, 0:2]      # Vector de costes\n",
+    "        A = output[:, 2:6].reshape(-1, 2, 2)  # Matriz A (2x2)\n",
+    "        b = output[:, 6:8]      # Vector de restricciones\n",
+    "        return torch.stack([smooth_lp(c[i], A[i], b[i]) for i in range(u.shape[0])])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funcion de perdida\n",
+    "def my_loss(rs, target):\n",
+    "    loss = torch.sum((rs - target) ** 2)\n",
+    "    return loss\n",
+    "\n",
+    "def loss_fn(rs, target):\n",
+    "    return torch.mean(torch.stack([my_loss(rs[i], target[i]) for i in range(len(rs))]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,10 +270,10 @@
     "    for batch, (u_batch, x_batch) in enumerate(dataloader):\n",
     "        size = len(dataloader.dataset)\n",
     "\n",
-    "        c, A, b = model(u_batch)\n",
+    "        rs = model(u_batch)\n",
     "        # Calcular la pérdida\n",
     "        #loss = my_loss(c[0], A[0], b[0], x_batch[0])  # Usar el target correspondiente\n",
-    "        loss = loss_fn(c, A, b, x_batch)\n",
+    "        loss = loss_fn(rs, x_batch)\n",
     "\n",
     "        # Backpropagation y optimización\n",
     "        optimizer.zero_grad()\n",
@@ -281,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,10 +299,9 @@
     "\n",
     "    #with torch.no_grad():\n",
     "    for u_batch, x_batch in dataloader:\n",
-    "        c, A, b = model(u_batch)\n",
-    "        test_loss += loss_fn(c, A, b, x_batch).item()\n",
-    "        x_pred = torch.stack([smooth_lp(c[i], A[i], b[i]) for i in range(len(c))])\n",
-    "        correct += torch.sum(x_pred == x_batch).item() # cambiar esto, aqui poner la solucion del problema\n",
+    "        rs = model(u_batch)\n",
+    "        test_loss += loss_fn(rs, x_batch).item()\n",
+    "        correct += torch.sum(rs == x_batch).item() # cambiar esto, aqui poner la solucion del problema\n",
     "        # y consideramos correcto si se acerca a la solucion en la distancia euclidea \n",
     "    test_loss /= num_batches\n",
     "    correct /= size\n",
@@ -305,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -314,87 +319,87 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 751.658081  [    8/ 1024]\n",
-      "loss: 406.782806  [   72/ 1024]\n",
-      "loss: 323.025909  [  136/ 1024]\n",
-      "loss: 706.061523  [  200/ 1024]\n",
-      "loss: 270.391846  [  264/ 1024]\n",
-      "loss: 1138.208984  [  328/ 1024]\n",
-      "loss: 972.936401  [  392/ 1024]\n",
-      "loss: 536.850708  [  456/ 1024]\n",
-      "loss: 161.913574  [  520/ 1024]\n",
-      "loss: 630.460999  [  584/ 1024]\n",
-      "loss: 448.160828  [  648/ 1024]\n",
-      "loss: 878.794006  [  712/ 1024]\n",
-      "loss: 392.461365  [  776/ 1024]\n",
-      "loss: 636.737366  [  840/ 1024]\n",
-      "loss: 305.131714  [  904/ 1024]\n",
-      "loss: 430.907837  [  968/ 1024]\n",
+      "loss: 485.205322  [    8/ 1024]\n",
+      "loss: 244.984070  [   72/ 1024]\n",
+      "loss: 804.971008  [  136/ 1024]\n",
+      "loss: 269.654266  [  200/ 1024]\n",
+      "loss: 693.579712  [  264/ 1024]\n",
+      "loss: 118.670303  [  328/ 1024]\n",
+      "loss: 679.134521  [  392/ 1024]\n",
+      "loss: 1408.530518  [  456/ 1024]\n",
+      "loss: 385.504852  [  520/ 1024]\n",
+      "loss: 828.076111  [  584/ 1024]\n",
+      "loss: 510.319061  [  648/ 1024]\n",
+      "loss: 461.941101  [  712/ 1024]\n",
+      "loss: 484.007141  [  776/ 1024]\n",
+      "loss: 510.091003  [  840/ 1024]\n",
+      "loss: 638.853699  [  904/ 1024]\n",
+      "loss: 523.650391  [  968/ 1024]\n",
       "Test Error: \n",
-      " Accuracy: 0.0%, Avg loss: 639.000893 \n",
+      " Accuracy: 0.0%, Avg loss: 651.517210 \n",
       "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 910.739624  [    8/ 1024]\n",
-      "loss: 598.135925  [   72/ 1024]\n",
-      "loss: 673.777466  [  136/ 1024]\n",
-      "loss: 1124.274902  [  200/ 1024]\n",
-      "loss: 793.530579  [  264/ 1024]\n",
-      "loss: 814.863525  [  328/ 1024]\n",
-      "loss: 74.730316  [  392/ 1024]\n",
-      "loss: 615.075745  [  456/ 1024]\n",
-      "loss: 531.544312  [  520/ 1024]\n",
-      "loss: 398.201904  [  584/ 1024]\n",
-      "loss: 197.492126  [  648/ 1024]\n",
-      "loss: 127.287521  [  712/ 1024]\n",
-      "loss: 579.338562  [  776/ 1024]\n",
-      "loss: 726.397400  [  840/ 1024]\n",
-      "loss: 1225.153198  [  904/ 1024]\n",
-      "loss: 373.116455  [  968/ 1024]\n",
+      "loss: 714.963745  [    8/ 1024]\n",
+      "loss: 903.632446  [   72/ 1024]\n",
+      "loss: 1251.721313  [  136/ 1024]\n",
+      "loss: 1229.534790  [  200/ 1024]\n",
+      "loss: 1098.389160  [  264/ 1024]\n",
+      "loss: 826.662537  [  328/ 1024]\n",
+      "loss: 405.439301  [  392/ 1024]\n",
+      "loss: 1071.989258  [  456/ 1024]\n",
+      "loss: 376.599243  [  520/ 1024]\n",
+      "loss: 657.246155  [  584/ 1024]\n",
+      "loss: 549.175964  [  648/ 1024]\n",
+      "loss: 1256.094482  [  712/ 1024]\n",
+      "loss: 82.234024  [  776/ 1024]\n",
+      "loss: 971.712280  [  840/ 1024]\n",
+      "loss: 816.485474  [  904/ 1024]\n",
+      "loss: 961.377319  [  968/ 1024]\n",
       "Test Error: \n",
-      " Accuracy: 0.0%, Avg loss: 639.000897 \n",
+      " Accuracy: 0.0%, Avg loss: 651.517206 \n",
       "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 1125.084351  [    8/ 1024]\n",
-      "loss: 325.764954  [   72/ 1024]\n",
-      "loss: 669.022339  [  136/ 1024]\n",
-      "loss: 67.274315  [  200/ 1024]\n",
-      "loss: 621.094360  [  264/ 1024]\n",
-      "loss: 656.357788  [  328/ 1024]\n",
-      "loss: 119.747337  [  392/ 1024]\n",
-      "loss: 376.442719  [  456/ 1024]\n",
-      "loss: 81.092003  [  520/ 1024]\n",
-      "loss: 842.756714  [  584/ 1024]\n",
-      "loss: 19.782906  [  648/ 1024]\n",
-      "loss: 1161.933838  [  712/ 1024]\n",
-      "loss: 478.029297  [  776/ 1024]\n",
-      "loss: 1083.352661  [  840/ 1024]\n",
-      "loss: 366.937378  [  904/ 1024]\n",
-      "loss: 1054.134766  [  968/ 1024]\n",
+      "loss: 304.617188  [    8/ 1024]\n",
+      "loss: 1531.706787  [   72/ 1024]\n",
+      "loss: 657.242493  [  136/ 1024]\n",
+      "loss: 665.507690  [  200/ 1024]\n",
+      "loss: 280.219757  [  264/ 1024]\n",
+      "loss: 572.227234  [  328/ 1024]\n",
+      "loss: 438.514343  [  392/ 1024]\n",
+      "loss: 1109.142090  [  456/ 1024]\n",
+      "loss: 408.857269  [  520/ 1024]\n",
+      "loss: 101.497643  [  584/ 1024]\n",
+      "loss: 177.196045  [  648/ 1024]\n",
+      "loss: 1068.771851  [  712/ 1024]\n",
+      "loss: 503.106232  [  776/ 1024]\n",
+      "loss: 1012.801758  [  840/ 1024]\n",
+      "loss: 146.501114  [  904/ 1024]\n",
+      "loss: 1377.078125  [  968/ 1024]\n",
       "Test Error: \n",
-      " Accuracy: 0.0%, Avg loss: 639.000889 \n",
+      " Accuracy: 0.0%, Avg loss: 651.517207 \n",
       "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 1111.422852  [    8/ 1024]\n",
-      "loss: 519.805725  [   72/ 1024]\n",
-      "loss: 647.872131  [  136/ 1024]\n",
-      "loss: 432.931702  [  200/ 1024]\n",
-      "loss: 316.999969  [  264/ 1024]\n",
-      "loss: 137.112289  [  328/ 1024]\n",
-      "loss: 497.010559  [  392/ 1024]\n",
-      "loss: 514.430054  [  456/ 1024]\n",
-      "loss: 834.686157  [  520/ 1024]\n",
-      "loss: 847.879700  [  584/ 1024]\n",
-      "loss: 307.159149  [  648/ 1024]\n",
-      "loss: 456.469971  [  712/ 1024]\n",
-      "loss: 416.823792  [  776/ 1024]\n",
-      "loss: 645.336853  [  840/ 1024]\n",
-      "loss: 1079.212646  [  904/ 1024]\n",
-      "loss: 374.324158  [  968/ 1024]\n",
+      "loss: 919.941895  [    8/ 1024]\n",
+      "loss: 571.950867  [   72/ 1024]\n",
+      "loss: 40.923874  [  136/ 1024]\n",
+      "loss: 907.074158  [  200/ 1024]\n",
+      "loss: 884.398438  [  264/ 1024]\n",
+      "loss: 376.128418  [  328/ 1024]\n",
+      "loss: 846.528564  [  392/ 1024]\n",
+      "loss: 541.538574  [  456/ 1024]\n",
+      "loss: 642.417175  [  520/ 1024]\n",
+      "loss: 607.079712  [  584/ 1024]\n",
+      "loss: 277.416473  [  648/ 1024]\n",
+      "loss: 619.769897  [  712/ 1024]\n",
+      "loss: 227.210358  [  776/ 1024]\n",
+      "loss: 527.240723  [  840/ 1024]\n",
+      "loss: 187.710022  [  904/ 1024]\n",
+      "loss: 611.597717  [  968/ 1024]\n",
       "Test Error: \n",
-      " Accuracy: 0.0%, Avg loss: 639.000886 \n",
+      " Accuracy: 0.0%, Avg loss: 651.517207 \n",
       "\n",
       "Done!\n"
      ]
@@ -412,54 +417,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"model_weights.pth\")"
+    "# torch.save(model.state_dict(), \"model_weights.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0.1192, -0.0461], requires_grad=True)"
+       "tensor([[-0.0367,  0.0072]], grad_fn=<StackBackward0>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c,A,b=model(torch.tensor([[1.0]]))\n",
-    "smooth_lp(c[0], A[0], b[0])"
+    "model(torch.tensor([[1.0]]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `validacion` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "en el dataloader hay alguna manera de añadirle un conjunto de validacion?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +479,7 @@
        "        [4.0000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +522,7 @@
        "        [9.9999e-01, 1.9565e-05]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +549,7 @@
        ")"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +570,7 @@
        " tensor([[5.6596e-06, 5.1630e-06]], dtype=torch.float64))"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,19 +583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1622, -0.2429]], grad_fn=<SliceBackward0>),\n",
-       " tensor([[[-0.4103,  0.0860],\n",
-       "          [ 0.0938,  0.0168]]], grad_fn=<ViewBackward0>),\n",
-       " tensor([[0.1193, 0.0358]], grad_fn=<SliceBackward0>))"
+       "tensor([[0.2080, 0.6034]], grad_fn=<StackBackward0>)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,28 +603,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2080, 0.6034]], grad_fn=<StackBackward0>)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c, A, b = model(torch.tensor([[0.25]]))\n",
-    "x_pred = smooth_lp(c[0], A[0], b[0])"
+    "x_pred = model(torch.tensor([[0.25]]))\n",
+    "x_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(tensor([[5.6596e-06, 5.1630e-06]], dtype=torch.float64),\n",
-       " tensor([-0.0162,  0.0243], requires_grad=True),\n",
-       " tensor(0.0292, dtype=torch.float64, grad_fn=<LinalgVectorNormBackward0>))"
+       " tensor([[0.2080, 0.6034]], grad_fn=<StackBackward0>),\n",
+       " tensor(0.6383, dtype=torch.float64, grad_fn=<LinalgVectorNormBackward0>))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +650,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# se parecen bastante, ahora el siguiente paso es hacer la validacion, ya lo dejo para mañana"
+    "# para mañana revisar la funcion de smooth_lp y la funcion de perdida y ver si puedo sustituir la\n",
+    "# funcion smooth_lp por la funcion de linprog de deep_inv_opt. Tambien organizar y explicar un poco\n",
+    "# mejor el codigo y ver por qué el loss no esta disminuyendo al entrenar el modelo. Entrenar el modelo\n",
+    "# con mas epocas y ver si mejora."
    ]
   }
  ],
